# ssbu-decomp

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CUsersseanbDevtmp_param_diffs.txt  FUN_710374f360.txt  README.md  RESEARCH.md  SIZE_DIFF_REPORT_POOL_B.md  WORKER-pool-a.md  WORKER-pool-b.md  WORKER-pool-c.md  WORKER-pool-d.md  WORKER-pool-e.md  WORKER-pool-f.md  WORKER-pool-g.md  WORKER-pool-h.md  WORKER-pool-i.md  WORKER-pool-j.md  WORKER.md  build.bat  build_output2.txt  build_phase0_force.txt  build_phase0_touched.txt  diff_settings.py  done_addrs.txt  verify_output.txt
.claude/: settings.local.json
asm/: FUN_710374f360_ghidra_1304.c  FUN_710374f360_ghidra_decomp.c  FighterAreaModuleImpl__disable_fix_jostle_area_impl.s  FighterAreaModuleImpl__enable_fix_jostle_area_impl.s  FighterAreaModuleImpl__enable_fix_jostle_area_xy_impl.s  ResLoadingThread_ghidra_1301.c  game_ldn_initialize_ghidra.c  ghidra_FUN_7103747270.c  res_process_loop_disasm.txt
config/: dispatchers_posture.txt  first_targets.md
data/: fun_triage.csv  functions.csv  functions.csv.bak  ghidra_1301_named.csv  ghidra_cache.json  pool_assignments.md  undefined_types.md
docs/: ORCHESTRATOR.md
include/: types.h
toolchain/: ToolchainNX64.cmake
tools/: analyze_regalloc.py  auto_fix_nonmatching.py  auto_merge.py  batch_compare.py  batch_ghidra_decomp.py  build.py  categorize_mismatches.py  classify_diffs.py  compare_bytes.py  compare_function.py  compare_versions.py  compiler_regression.py  config.toml  dedup_functions.py  diff_function.py  disasm_window.py  extract_passes.py  (+60 more)
(+850 files in other folders)
